# aaa-image-enhancement

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  image_features.py  pyproject.toml
.github/workflows/: ci.yml
EnhanceIMG/retinex/: enhancer.py  retinex_net.py
IAT_enhance/model/: IAT_main.py  global_net.py
benchmarks/: benchmark_app.py  benchmark_detectors.py  benchmark_enhancers.py
data_processing/: peak_uploads.ipynb
demo/: Dockerfile  demo_app.py  one_image.py
demo/templates/: index.html
dual_choice/: Dockerfile  README.md  app.py  compose-prod.yaml  compose.yaml  pyproject.toml
dual_choice/nginx/: default.conf
dual_choice/notebooks/: export_postgres.ipynb  redis-test.ipynb
dual_choice/src/dual_choice/: __init__.py  main.py
dual_choice/src/dual_choice/templates/: index.html
dual_choice/templates/: index.html
experiments/: apply_distortion.ipynb  basic_enhancement.ipynb  better_features_detection.ipynb  check_images_validity.py  clean_dataset.ipynb  dark_features.py  dirty_image_features_detection.ipynb  duplicates.ipynb  make_sample_data_dual_choice.ipynb  maxim-pytorch.ipynb  old_features_detection.ipynb  parse_craigslist.py  run_enhance_img.py  run_gamma_corr.py  run_iat_enh.py  test_classical_enh.ipynb  test_enhancers.ipynb  test_low_light_detectors.ipynb  test_low_light_enhancement.ipynb  test_namedtuple.ipynb  train_distortion_detector.ipynb  train_tilting.ipynb
experiments/_notes/: dynamic_batches.py
experiments/data_processing/: peak_uploads.ipynb
experiments/dual_choice/: app.py
experiments/dual_choice/templates/: index.html
models/_outdated/deblur/: Dockerfile
models/deblur/: Dockerfile  commands.txt
models/detector/: Dockerfile
models/enhancer/: Dockerfile
models/low-light/: Dockerfile
src/: utils.py
src/aaa_image_enhancement/: __init__.py  app.py  defects_detection_fns.py  detection_fns.py  detector_app.py  enhance_image.py  enhancement_agents.py  enhancement_fns.py  enhancement_strategies.py  enhancer_app.py  exposure_enhancement.py  image_defects.py  image_defects_detection.py  image_features.py  image_utils.py  run_enhance_img.py  run_gamma_corr.py  run_iat_enh.py  synth_defects.py
src/aaa_image_enhancement/apps/: detector.py  enhancer.py  main.py
src/ocr/: main.py  process_directories.py
tests/: test_app_detector.py  test_detectors.py  test_enhancements.py  test_main_app.py  test_utils.py
tests/test_apps/: test_detector.py  test_enhancer.py  test_main.py
